Version 2.6.25 (May 19th, 2009)
-------------------------------
- fix E_NOTICE when sessions are disabled (mohrt)

Version 2.6.24 (May 16th, 2009)
-------------------------------
- fix problem introduced with super global changes (mohrt)

Version 2.6.23 (May 13th, 2009)
-------------------------------
- strip backticks from {math} equations (mohrt)
- make PHP super globals read-only from template (mohrt)
- throw error when template exists but not readable (mohrt)

Version 2.6.22 (Dec 17th, 2008)
-------------------------------

- back out method chaining, bug in some versions of PCRE causes errors (mohrt)

Version 2.6.21 (Dec 2nd, 2008)
------------------------------

- fix  function injection security hole closed (U.Tews)
- fix pass expiration time at cache_handler_fuc call in core.write_cache_file.php (U.Tews)
- Update of compiler.class.php to allow method chaining for PHP4 and PHP5 (U.Tews)

Version 2.6.20 (Feb 15th, 2008)
-------------------------------

- fix cache tag bug when multiple cache tags on a page (mankyd,
  mohrt)
- fix /e tag checking when using arrays with regex_replace
  (mohrt)
- fix that function results can be used with condition like "is even" in 
  {if} tags (U.Tews)
- fix handling of non-empty <pre>-tags and empty <textarea>- and
  <script>-tags (Spuerhund, messju)

Version 2.6.19 (Feb 11th, 2008)
-------------------------------

- fix regex_replace allowing \0 in the search string (c960657,
  monte)
- add append feature to {capture} (jablko, monte)
- fix when (un)registering filters with the same method name but different class
  name (danilo)
- fix calling registered objects' methods with an empty argument list
  (marcello, messju)
 
Version 2.6.18 (Mar 7th, 2007)
------------------------------

- fix html_select_date separator when parts are missing (hayk,
  monte)
- fix broken detection of non-cached blocks introduced in 2.6.17
  (messju)

Version 2.6.17 (Mar 5th, 2007)
------------------------------
